[1.232] fix broken links

--- a/faq/faq1.html
+++ b/faq/faq1.html
@@ -52,7 +52,7 @@ FAQ - Введение в OpenBSD
   <li>OpenBSD это полнофункциональная UNIX-подобная операционная система,
       доступная в исходном и двоичном виде бесплатно.
   <li>OpenBSD интегрирует передовые технологии безопасности, подходящие для
-      <a href="pf/example1.html">построения сетевых экранов</a> и
+      <a href="https://www.openbsd.org/faq/pf/example1.html">построения сетевых экранов</a> и
       частных сетевых сервисов в распределённом окружении.
   <li>OpenBSD извлекает выгоду из сильного постоянного развития во многих
   областях, предлагая возможности работать с появляющимися технологиями и
@@ -73,7 +73,7 @@ OpenBSD полностью свободна.
 Все части OpenBSD имеют разумную лицензию, разрешающую свободное
 распространение.
 Больше информации об авторском праве OpenBSD можно найти
-<a href="../policy.html">здесь</a>.
+<a href="https://www.openbsd.org/policy.html">здесь</a>.
 
 <p>
 Разработчики OpenBSD поддерживают проект в основном из собственных средств.
@@ -102,7 +102,7 @@ OpenBSD распространяется с рядом сторонних про
 
 Команда OpenBSD часто добавляет изменения в сторонние компоненты, как правило,
 для улучшения безопасности или качества кода.
-Много <a href="../innovations.html">инноваций</a> также включены.
+Много <a href="https://www.openbsd.org/innovations.html">инноваций</a> также включены.
 Дополнительные приложения доступны в виде <a href="faq15.html">пакетов</a>.
 
 <h3 id="HowAbout">Почему <i>продукт X</i> не включен?</h3>
@@ -121,23 +121,23 @@ OpenBSD распространяется с рядом сторонних про
 
 <h2 id="Platforms">Поддержка аппаратного обеспечения</h2>
 
-OpenBSD работает на следующих <a href="../plat.html">платформах</a>:
+OpenBSD работает на следующих <a href="https://www.openbsd.org/plat.html">платформах</a>:
 <!-- XXXrelease - verify platform list is current -->
 
 <ul>
-  <li><a href="../alpha.html"   >alpha</a>
-  <li><a href="../amd64.html"   >amd64</a>
-  <li><a href="../arm64.html"   >arm64</a>
-  <li><a href="../armv7.html"   >armv7</a>
-  <li><a href="../hppa.html"    >hppa</a>
-  <li><a href="../i386.html"    >i386</a>
-  <li><a href="../landisk.html" >landisk</a>
-  <li><a href="../loongson.html">loongson</a>
-  <li><a href="../luna88k.html" >luna88k</a>
-  <li><a href="../macppc.html"  >macppc</a>
-  <li><a href="../octeon.html"  >octeon</a>
-  <li><a href="../sgi.html"     >sgi</a>
-  <li><a href="../sparc64.html" >sparc64</a>
+  <li><a href="https://www.openbsd.org/alpha.html"   >alpha</a>
+  <li><a href="https://www.openbsd.org/amd64.html"   >amd64</a>
+  <li><a href="https://www.openbsd.org/arm64.html"   >arm64</a>
+  <li><a href="https://www.openbsd.org/armv7.html"   >armv7</a>
+  <li><a href="https://www.openbsd.org/hppa.html"    >hppa</a>
+  <li><a href="https://www.openbsd.org/i386.html"    >i386</a>
+  <li><a href="https://www.openbsd.org/landisk.html" >landisk</a>
+  <li><a href="https://www.openbsd.org/loongson.html">loongson</a>
+  <li><a href="https://www.openbsd.org/luna88k.html" >luna88k</a>
+  <li><a href="https://www.openbsd.org/macppc.html"  >macppc</a>
+  <li><a href="https://www.openbsd.org/octeon.html"  >octeon</a>
+  <li><a href="https://www.openbsd.org/sgi.html"     >sgi</a>
+  <li><a href="https://www.openbsd.org/sparc64.html" >sparc64</a>
 </ul>
 
 Specific hardware support details are on the respective platform pages.
@@ -171,7 +171,7 @@ OpenBSD поставляется с обширной документацией 
   <a href="https://man.openbsd.org/shutdown">shutdown(8)</a>
   - остановка и перезагрузки системы.
   <li><a href="https://man.openbsd.org/syspatch">syspatch(8)</a>
-  - применение <a href="faq10.html#Patches">обновлений безопасности и надёжности</a>.
+  - применение <a href="https://www.openbsd.org/faq/faq10.html#Patches">обновлений безопасности и надёжности</a>.
   <li><a href="https://man.openbsd.org/dmesg">dmesg(8)</a>
   - повторный показ сообщений ядра в момент загрузки.
   <li><a href="https://man.openbsd.org/doas">doas(1)</a>
@@ -237,7 +237,7 @@ $ <b>man 5 crontab</b>
       Это самый активный список и он должен быть «по умолчанию»
 	  для большинства вопросов и обсуждений.
   <li><b>ports</b> - Обсуждение
-      <a href="ports/ports.html">дерева портов</a>.
+      <a href="https://www.openbsd.org/faq/ports/ports.html">дерева портов</a>.
   <li><b>source-changes</b> - Автоматическая рассылка изменений дерева исходников CVS.
       Каждый раз, когда разработчик вносит изменения в исходный код OpenBSD, xenocara
 	  или www, CVS отправляет копию сообщения об изменении в этот список.
@@ -256,12 +256,12 @@ $ <b>man 5 crontab</b>
 
 <p>
 Вы можете найти несколько архивов, другие рекомендаций и дополнительную
-информацию на <a href="../mail.html">странице списка рассылки</a>. Подписками
+информацию на <a href="https://www.openbsd.org/mail.html">странице списка рассылки</a>. Подписками
 можно легко управлять через <a href="https://lists.openbsd.org">веб-интерфейс</a>.
 
 <h2 id="OtherUnixes">Миграция на OpenBSD</h2>
 
-Если вы изучили Unix по любой <a href="../books.html">хорошей книге</a>, поняли
+Если вы изучили Unix по любой <a href="https://www.openbsd.org/books.html">хорошей книге</a>, поняли
 философию Unix и затем расширили свои знания до конкретной платформы, вы
 обнаружите, что OpenBSD вам знакома.
 
@@ -276,7 +276,7 @@ $ <b>man 5 crontab</b>
   <li>OpenBSD - это Unix в стиле BSD, следующий дизайну 4.4BSD. Linux и Solaris
       являются системами в стиле System V. Некоторые Unix-подобные операционные
       системы смешивают характеристики System V и BSD. Распространенным местом, где
-      это вызывает путаницу, являются <a href="faq10.html#rc">сценарии запуска</a>.
+      это вызывает путаницу, являются <a href="https://www.openbsd.org/faq/faq10.html#rc">сценарии запуска</a>.
       OpenBSD использует систему <a href="https://man.openbsd.org/rc">rc(8)</a>.
   <li>OpenBSD - это законченная система. Это не ядро плюс утилиты, которые
       можно обновлять отдельно друг от друга.
@@ -295,7 +295,7 @@ $ <b>man 5 crontab</b>
 	  Вместо этого мы используем функциональность
       <a href="faq14.html#SoftUpdates">"мягких обновлений"</a> (soft updates)
       Fast File System (FFS).
-  <li>OpenBSD поставляется с <a href="pf/index.html">фильтром сетевых пакетов</a>
+  <li>OpenBSD поставляется с <a href="https://www.openbsd.org/faq/pf/index.html">фильтром сетевых пакетов</a>
       (Packet Filter (PF)). Это означает, что трансляция сетевых адресов
       (Network Address Translation), очереди и фильтрация обрабатываются с помощью
       <a href="https://man.openbsd.org/pfctl">pfctl(8)</a>,
@@ -354,7 +354,7 @@ ddb> trace
 Thank you!
 </pre>
 
-Смотрите <a href="../report.html">эту страницу</a> для получения дополнительной информации
+Смотрите <a href="https://www.openbsd.org/report.html">эту страницу</a> для получения дополнительной информации
 о создании и отправке отчетов об ошибках.
 Включите подробную информацию о том, что произошло, точную конфигурацию вашей системы
 и последовательность шагов для воспроизведения проблемы.
@@ -376,7 +376,7 @@ Thank you!
 получения дополнительной информации или с просьбой протестировать изменения.
 Вы также можете следить за архивами рассылки
 <a href="mailto:bugs@openbsd.org">bugs@openbsd.org</a> - детали
-на странице <a href="../mail.html">почтовой рассылки</a>.
+на странице <a href="https://www.openbsd.org/mail.html">почтовой рассылки</a>.
 
 <h2 id="Support">Поддержка проекта</h2>
 
@@ -394,20 +394,20 @@ OpenBSD.
       OpenBSD store, including <a href="../tshirts.html">shirts</a> for your
       wearing enjoyment.
   -->
-  <li><a href="../donations.html">Пожертвовать деньги</a>.
+  <li><a href="https://www.openbsd.org/donations.html">Пожертвовать деньги</a>.
       Проект постоянно нуждается в деньгах для оплаты оборудования, сетевых подключений и т.д.
       Даже небольшие пожертвования имеют огромное значение.
-  <li><a href="../want.html">Пожертвовать аппаратуру или детали</a>.
+  <li><a href="https://www.openbsd.org/want.html">Пожертвовать аппаратуру или детали</a>.
       Проект испытывает постоянную необходимость в аппаратном обеспечении.
   <li><a href="faq5.html#Diff">Пожертвуйте ваше время и навыки</a>.
 	  Программисты, которым нравится писать операционные системы, всегда
 	  приветствуются, но есть много других способов, которыми люди могут быть
 	  полезны.
-  <li>Подписывайтесь на <a href="../mail.html">списки рассылки</a> и помогайте отвечать на
+  <li>Подписывайтесь на <a href="https://www.openbsd.org/mail.html">списки рассылки</a> и помогайте отвечать на
       вопросы от других пользователей.
   <li>Помогать поддерживать документацию и присылать новый материал для FAQ на адрес
       <a href="mailto:misc@openbsd.org">misc@openbsd.org</a>.
-  <li>Организовать локальную <a href="../groups.html">группу пользователей</a> показать
+  <li>Организовать локальную <a href="https://www.openbsd.org/groups.html">группу пользователей</a> показать
       друзьям на сколько OpenBSD классная система.
   <li>Обратиться к работодателю с просьбой использовать OpenBSD для работы.
       Если вы студент, то обсудить с преподавателями возможность использования OpenBSD в качестве
