[1.440] fix broken link

--- a/security.html
+++ b/security.html
@@ -289,7 +289,8 @@ Networks.<p>
 <a name="papers"></a>
 <li><h3><font color="#e00000">Дополнительно</font></h3><p>
 
-Разработчиками OpenBSD написаны <a href="papers/index.html">материалы</a>,
+Разработчиками OpenBSD написаны
+<a href="https://www.openbsd.org/papers/index.html">материалы</a>,
 некоторые из которых так или иначе связаны с темой security.
 </ul>
 
