[1.538] update links for faq8 (using local version)

--- a/faq/index.html
+++ b/faq/index.html
@@ -149,12 +149,12 @@ OpenBSD, так и <a href="http://www.openbsd.org/cgi-bin/man.cgi">онлайн
 
 <h3><a href="https://www.openbsd.org/faq/faq8.html">Общие вопросы</a></h3>
 <ul>
-<li><a href="https://www.openbsd.org/faq/faq8.html#LostPW"    >Я забыл пароль для root</a>
-<li><a href="https://www.openbsd.org/faq/faq8.html#OpenNTPD"  >Работа с OpenNTPD</a>
-<li><a href="https://www.openbsd.org/faq/faq8.html#TimeZone"  >Часовые пояса</a>
-<li><a href="https://www.openbsd.org/faq/faq8.html#locales"   >Character Sets и локализация</a>
-<li><a href="https://www.openbsd.org/faq/faq8.html#RevDNS"    >Reverse DNS</a>
-<li><a href="https://www.openbsd.org/faq/faq8.html#GenNotConf">Об устройствах, которые "not configured" в dmesg</a>
+<li><a href="faq8.html#LostPW"    >Я забыл пароль для root</a>
+<li><a href="faq8.html#OpenNTPD"  >Использование OpenNTPD</a>
+<li><a href="faq8.html#TimeZone"  >Часовые пояса</a>
+<li><a href="faq8.html#locales"   >Набор символов (character sets) и локализация</a>
+<li><a href="faq8.html#RevDNS"    >Обратный просмотр DNS</a>
+<li><a href="faq8.html#GenNotConf">Устройсто "not configured" в dmesg</a>
 </ul>
 
 <h3><a href="faq11.html">X Window System</a></h3>
