--- a/faq/index.html
+++ b/faq/index.html
@@ -147,7 +147,7 @@ OpenBSD, так и <a href="http://www.openbsd.org/cgi-bin/man.cgi">онлайн
 <li><a href="https://www.openbsd.org/faq/faq7.html#SerCon"       >Настройка Serial Console</a>
 </ul>
 
-<h3><a href="https://www.openbsd.org/faq/faq8.html">Общие вопросы</a></h3>
+<h3><a href="faq8.html">Общие вопросы</a></h3>
 <ul>
 <li><a href="faq8.html#LostPW"    >Я забыл пароль для root</a>
 <li><a href="faq8.html#OpenNTPD"  >Использование OpenNTPD</a>
@@ -203,33 +203,32 @@ OpenBSD, так и <a href="http://www.openbsd.org/cgi-bin/man.cgi">онлайн
 <ul>
 <li>Основная настройка
   <ul>
-  <li><a href="https://www.openbsd.org/faq/pf/config.html"    >Getting Started</a>
-  <li><a href="https://www.openbsd.org/faq/pf/macros.html"    >Lists and Macros</a>
-  <li><a href="https://www.openbsd.org/faq/pf/tables.html"    >Tables</a>
-  <li><a href="https://www.openbsd.org/faq/pf/filter.html"    >Packet Filtering</a>
-  <li><a href="https://www.openbsd.org/faq/pf/nat.html"       >Network Address Translation</a>
-  <li><a href="https://www.openbsd.org/faq/pf/rdr.html"       >Traffic Redirection (Port Forwarding)</a>
-  <li><a href="https://www.openbsd.org/faq/pf/shortcuts.html" >Shortcuts for Creating Rulesets</a>
+  <li><a href="https://www.openbsd.org/faq/pf/config.html"    >Введение</a>
+  <li><a href="https://www.openbsd.org/faq/pf/macros.html"    >Списки и Макросы</a>
+  <li><a href="https://www.openbsd.org/faq/pf/tables.html"    >Таблицы</a>
+  <li><a href="https://www.openbsd.org/faq/pf/filter.html"    >Фильтрация пакетов</a>
+  <li><a href="https://www.openbsd.org/faq/pf/nat.html"       >Преобразование сетевых адресов</a>
+  <li><a href="https://www.openbsd.org/faq/pf/rdr.html"       >Перенаправление трафика (Port Forwarding)</a>
+  <li><a href="https://www.openbsd.org/faq/pf/shortcuts.html" >Сокращения для написания правил</a>
   </ul>
 <li>Детальная настройка
   <ul>
-  <li><a href="https://www.openbsd.org/faq/pf/options.html"   >Runtime Options</a>
-  <li><a href="https://www.openbsd.org/faq/pf/anchors.html"   >Anchors</a>
-  <li><a href="https://www.openbsd.org/faq/pf/pools.html"     >Address Pools and Load Balancing</a>
-  <li><a href="https://www.openbsd.org/faq/pf/tagging.html"   >Packet Tagging (Policy Filtering)</a>
+  <li><a href="https://www.openbsd.org/faq/pf/options.html"   >Параметры работы фильтра</a>
+  <li><a href="https://www.openbsd.org/faq/pf/anchors.html"   >Якоря</a>
+  <li><a href="https://www.openbsd.org/faq/pf/pools.html"     >Пулы адресов и балансировка нагрузки</a>
+  <li><a href="https://www.openbsd.org/faq/pf/tagging.html"   >Маркировка пакетов (Политика фильтрации)</a>
   </ul>
 <li>Дополнительные вопросы
   <ul>
-  <li><a href="https://www.openbsd.org/faq/pf/logging.html"   >Logging</a>
-  <li><a href="https://www.openbsd.org/faq/pf/perf.html"      >Performance</a>
-  <li><a href="https://www.openbsd.org/faq/pf/ftp.html"       >Issues with FTP</a>
-  <li><a href="https://www.openbsd.org/faq/pf/authpf.html"    >User Shell for Authenticating
-                                   Gateways (authpf)</a>
-  <li><a href="https://www.openbsd.org/faq/pf/carp.html"      >Firewall Redundancy (CARP and pfsync)</a>
+  <li><a href="https://www.openbsd.org/faq/pf/logging.html"   >Запись в журнал (logging)</a>
+  <li><a href="https://www.openbsd.org/faq/pf/perf.html"      >Производительность</a>
+  <li><a href="https://www.openbsd.org/faq/pf/ftp.html"       >Проблемы с FTP</a>
+  <li><a href="https://www.openbsd.org/faq/pf/authpf.html"    >Оболочка для аутентификации пользователей на шлюзах (authpf)</a>
+  <li><a href="https://www.openbsd.org/faq/pf/carp.html"      >Создание избыточности брэндмауэра (CARP и pfsync)</a>
   </ul>
 <li>Примеры правил
   <ul>
-  <li><a href="https://www.openbsd.org/faq/pf/example1.html"  >Building a Router</a>
+  <li><a href="https://www.openbsd.org/faq/pf/example1.html"  >Настройка брандмауэра (building a router)</a>
   </ul>
 </ul>
 
