--- a/hackathons.html
+++ b/hackathons.html
@@ -407,7 +407,7 @@ td {
     Октябрь 8 - 13, 2012<br>
     Будапешт, Вергрия<br>
     9 разработчиков<br>
-    Funded by <a href="donations.html">donations to
+    Funded by <a href="https://www.openbsd.org/donations.html">donations to
     The OpenBSD Project</a>.
 <tr>
 <td>
@@ -444,7 +444,7 @@ td {
     Ноябрь 12 - 18, 2011<br>
     Budapest, Hungary<br>
     15 разработчиков<br>
-    Funded by <a href="donations.html">donations to
+    Funded by <a href="https://www.openbsd.org/donations.html">donations to
     the OpenBSD Project</a>.
 <td>
     <a id="a2k11" href="images/hackathons/a2k11.gif">
@@ -489,7 +489,7 @@ td {
     Будапешт, Венгрия<br>
     19 разработчиков<br>
     При поддержке
-    <a href="donations.html">пожертований проекту OpenBSD</a>.
+    <a href="https://www.openbsd.org/donations.html">пожертований проекту OpenBSD</a>.
 <tr>
 <td>
     <a id="j2k10" href="images/hackathons/j2k10.gif">
@@ -531,7 +531,7 @@ td {
     Ноябрь 21 - 27, 2009<br>
     Coimbra, Португалия<br>
     15 разработчиков<br>
-    Организован благодаря <a href="donations.html">пожертвованиям
+    Организован благодаря <a href="https://www.openbsd.org/donations.html">пожертвованиям
     в проект OpenBSD</a>
     и при поддержке <a href="http://www.uc.pt">University of Coimbra</a>.
 <td>
@@ -541,7 +541,7 @@ td {
     Октябрь 9 - 16, 2009<br>
     Будапешт, Венгрия<br>
     14 разоаботчиков<br>
-    Организован благодаря <a href="donations.html">пожертвованиям
+    Организован благодаря <a href="https://www.openbsd.org/donations.html">пожертвованиям
     проекту OpenBSD</a>.
 <td>
     <a id="f2k9" href="images/hackathons/f2k9.gif">
@@ -559,7 +559,7 @@ td {
     Май 30 - Jun 7, 2009<br>
     Эдмонтон, Альберта<br>
     46 разработчиков<br>
-    Организован благодаря <a href="donations.html">пожертвованиям
+    Организован благодаря <a href="https://www.openbsd.org/donations.html">пожертвованиям
     проекту OpenBSD</a>.
 <td>
     <a id="n2k9" href="images/hackathons/n2k9.gif">
@@ -575,7 +575,7 @@ td {
     Ноябрь 20 - 27, 2008<br>
     Coimbra, Portugal<br>
     18 разработчиков<br>
-    Funded by <a href="donations.html">donations to
+    Funded by <a href="https://www.openbsd.org/donations.html">donations to
     the OpenBSD Project</a>
     and with the support of <a href="http://www.uc.pt">University of Coimbra</a>.
 <tr>
@@ -586,7 +586,7 @@ td {
     Октябрь 24 - 31, 2008<br>
     Будапешт, Вергрия<br>
     13 разработчиков<br>
-    Организован <a href="donations.html">при поддержке
+    Организован <a href="https://www.openbsd.org/donations.html">при поддержке
     проекта OpenBSD</a>.
 <td>
     <a id="c2k8" href="images/hackathons/c2k8.gif">
@@ -603,7 +603,7 @@ td {
     Май 5-10, 2008<br>
     Ито, Япония<br>
     18 разработчиков<br>
-    Организован <a href="donations.html">при поддержке
+    Организован <a href="https://www.openbsd.org/donations.html">при поддержке
     проекта OpenBSD</a> и помощи Mark Uemura.
 <tr>
 <td>
@@ -613,7 +613,7 @@ td {
     Ноябрь 22 - 29, 2007<br>
     Коимбра, Португалия<br>
     11 разработчиков<br>
-    Организован <a href="donations.html">при поддержке
+    Организован <a href="https://www.openbsd.org/donations.html">при поддержке
     проекта OpenBSD</a>,
     а также при поддержке <a href="http://www.uc.pt">University of Coimbra</a>.
 <td>
@@ -623,7 +623,7 @@ td {
     Октябрь 22 - 28, 2007<br>
     Будапешт, Венгрия<br>
     13 разработчиков<br>
-    Организован <a href="donations.html">при поддержке
+    Организован <a href="https://www.openbsd.org/donations.html">при поддержке
     проекта OpenBSD</a>.
 <td>
     <a id="c2k7" href="images/hackathons/c2k7.gif">
@@ -632,7 +632,7 @@ td {
     Май 25 - Jun 2, 2007<br>
     Калгари, Альберта<br>
     50 разработчиков<br>
-    Организован <a href="donations.html">при поддержке
+    Организован <a href="https://www.openbsd.org/donations.html">при поддержке
     проекта OpenBSD</a>.
 <tr>
 <td>
@@ -642,7 +642,7 @@ td {
     Апрель 10 - 15, 2007<br>
     Венна, Австрия<br>
     14 разработчиков<br>
-    Организован <a href="donations.html">при поддержке
+    Организован <a href="https://www.openbsd.org/donations.html">при поддержке
     проекта OpenBSD</a>.
 <td>
     <a id="h2k6" href="images/hackathons/h2k6.gif">
@@ -651,7 +651,7 @@ td {
     Ноябрь 25 - 30, 2006<br>
     Коимбра, Португалия<br>
     14 разработчиков<br>
-    Организован <a href="donations.html">при поддержке
+    Организован <a href="https://www.openbsd.org/donations.html">при поддержке
     проекта OpenBSD</a>,
     а также при поддержке <a href="http://www.uc.pt">University of Coimbra</a>.
 <td>
@@ -661,7 +661,7 @@ td {
     Октябрь 18 - 22, 2006<br>
     Будапешт, Венгрия<br>
     14 разработчиков<br>
-    Огранизован <a href="donations.html">при поддержке
+    Огранизован <a href="https://www.openbsd.org/donations.html">при поддержке
     проекта OpenBSD</a>.
 <tr>
 <td>
@@ -686,7 +686,7 @@ td {
     Май 21 - 29, 2006<br>
     Калгари, Альберта<br>
     47 разработчиков<br>
-    Организован <a href="donations.html">при поддержке
+    Организован <a href="https://www.openpbsd.org/donations.html">при поддержке
     проекта OpenBSD</a>.
 <tr>
 <td>
@@ -696,7 +696,7 @@ td {
     Ноябрь 1 - 4, 2005<br>
     Сан-Серволо, Венеция, Италия<br>
     12 разработчиков<br>
-    Организован <a href="donations.html">при поддержке
+    Организован <a href="https://www.openbsd.org/donations.html">при поддержке
     проекта OpenBSD</a>.
 <td>
     <a id="c2k5" href="images/hackathons/c2k5.gif">
@@ -705,7 +705,7 @@ td {
     Май 21 - 28, 2005<br>
     Калгари, Альберта<br>
     60 разработчиков<br>
-    Организован <a href="donations.html">при поддержке
+    Организован <a href="https://www.openbsd.org/donations.html">при поддержке
     проекта OpenBSD</a>.
 <td>
     <a id="c2k4" href="images/hackathons/c2k4.gif">
@@ -714,7 +714,7 @@ td {
     Июнь 19 - 26, 2004<br>
     Калгари, Алберта<br>
     46 разработчика<br>
-    Организован <a href="donations.html">при поддержке
+    Организован <a href="https://www.openbsd.org/donations.html">при поддержке
     проекта OpenBSD</a>.
 <tr>
 <td>
@@ -765,7 +765,7 @@ td {
     Июнь 15 - 18, 2000<br>
     Калгари, Альберта<br>    
     18 разработчиков<br>
-    Организован <a href="donations.html">при поддержке
+    Организован <a href="https://www.openbsd.org/donations.html">при поддержке
     проекта OpenBSD</a>.
 <tr>
 <td>
