--- a/goals.html
+++ b/goals.html
@@ -77,7 +77,7 @@
 <h2><font color="#e00000">Финансирование проекта</font></h2>
 
 Информацию об этом можно найти на нашей
-<a href="donations.html">странице пожертвований</a>.
+<a href="https://www.openbsd.org/donations.html">странице пожертвований</a>.
 
 <h2><font color="#e00000">Где живут разработчики?</font></h2>
 
