[1.440] fix broken link

--- a/security.html
+++ b/security.html
@@ -167,7 +167,7 @@ Networks.<p>
   <li>Chroot jailing
   <li>New uids
   <li>ProPolice
-  <li>... <a href="/innovations.html">и другие</a>
+  <li>... <a href="https://www.openbsd.org/innovations.html">и другие</a>
 </ul>
 <p>
 
