--- a/faq/faq8.html
+++ b/faq/faq8.html
@@ -27,7 +27,7 @@ FAQ - Общие вопросы
   <li><a href="#TimeZone"  >Часовые пояса</a>
   <li><a href="#locales"   >Набор символов (character sets) и локализация</a>
   <li><a href="#RevDNS"    >Обратный просмотр DNS</a>
-  <li><a href="#GenNotConf">Устройсто "not configured" в dmesg</a>
+  <li><a href="#GenNotConf">Устройство "not configured" в dmesg</a>
 </ul>
 
 <hr>
@@ -79,29 +79,31 @@ boot> <b>boot -s</b>
 
 <h2 id="OpenNTPD">Использование OpenNTPD</h2>
 
-<a href="https://www.openbsd.org/openntpd">OpenNTPD</a> is a safe and simple
-NTP-compatible way to have accurate time on your computer.
-The <a href="https://man.openbsd.org/ntpd">ntpd(8)</a> daemon is enabled by
-default at install time, resulting in your computer's clock slowly syncing
-with the <a href="http://www.pool.ntp.org">pool.ntp.org</a> time servers.
-Once the clock is accurately set,
-<code>ntpd</code> will hold it at a high degree of accuracy.
-However, if your time is more than a few minutes off, it is recommended to
-bring it close to accurate initially with the <code>-s</code> flag.
+<a href="https://openbsd-ru.github.io/openntpd/index.html">OpenNTPD</a>
+это надежный и простой NTP-совместимый способ иметь точное время в системе.
+<a href="https://man.openbsd.org/ntpd">ntpd(8)</a> демон включается по умолчанию
+во время установки, в результате чего часы вашего компьютера медленно
+синхронизируются с серверами <a href="http://www.pool.ntp.org">pool.ntp.org</a>.
+Как только часы будут точно настроенны, <code>ntpd</code> будет следить
+за тем, чтобы они не убежали. Однако, если ваши часы все равно отстают хотя бы
+на несколько минут, рекомедуется настроить их при помощи <code>-s</code>
+параметра.
 
 <p>
-To use OpenNTPD as a server, add a <code>listen on *</code> line to your
-<a href="https://man.openbsd.org/ntpd.conf">ntpd.conf(5)</a> file and restart
-the daemon.
-You can also instruct it to only listen on a specific address or interface.
+Для использования OpenNTPD в качестве сервера, добавьте строку
+<code>listen on *</code> в ваш
+<a href="https://man.openbsd.org/ntpd.conf">ntpd.conf(5)</a> файл и
+перезапустите демон.
+Можно настроить его и так, чтобы он работал только со специально указанным
+адресом или интерфейсом.
 
 <p>
-When you have <a href="https://man.openbsd.org/ntpd">ntpd(8)</a> listening,
-other machines may not be able to synchronize their clocks right away.
-This is because time information won't be served until the local clock
-is synced with a reasonable level of stability.
-Once this level is reached, a "clock now synced" message will appear in
-<code>/var/log/daemon</code>.
+После того как вы запустете <a href="https://man.openbsd.org/ntpd">ntpd(8)</a>
+в качестве сервера, другие машины, возможно, не смогут синхронизировать
+настройки времени сразу же. Это связано с тем, что информация о времени не
+будет предоставляться сервером до тех пор, пока не будет достигнут достаточный
+уровень стабильности. Как только этот уровень будет досигнут, в
+<code>/var/log/daemon</code> появится сообщение "clock now synced".
 
 <h2 id="TimeZone">Часовые пояса</h2>
 
@@ -252,16 +254,17 @@ If you are using <a href="faq6.html#DHCP">DHCP</a>, you should add
 as <code>resolv.conf</code> will be overwritten by
 <a href="https://man.openbsd.org/dhclient">dhclient(8)</a>.
 
-<h2 id="GenNotConf">Устройсто "not configured" в dmesg</h2>
+<h2 id="GenNotConf">Устройство "not configured" в dmesg</h2>
 
-In short, it means your device is not supported by the kernel you are using,
-so you will not be able to use it.
+Если в двух словах, то это значит, что устройство не поддерживается
+используемым ядром, т.е. вы не можете пользоваться этим устройством.
 
 <p>
-PCI and many other types of devices offer identifying information so that
-the OS can properly recognize and support devices.
-Adding recognition is easy, adding support is often not.
-Here are two examples of "not configured" devices:
+PCI и многие другие типы устройств предоставляют о себе так называемую
+информацию идетификации, чтобы ОС могла правильно распознать и
+работать с ними. В добавлении этого механизма распознавания нет ничего
+сложного, а вот добавление поддержки самого устройства - нет.
+Вот пример двух «не настроенных» устройств:
 
 <pre class="cmdbox">
 [...]
@@ -272,28 +275,27 @@ rev 0x03) at pci2 dev 9 function 1 not configured
 [...]
 </pre>
 
-Here we have two different network cards, neither of them functional.
-The first one had its vendor code identified, and the general type of card
-was determined, but not the precise model.
-The second one was fully identified, but the <code>not configured</code> line
-informs us that no driver was found for it.
+Тут у нас две сетевые карты, ни одна из них не работает. У первой был
+идентифицирован код поставщика, и был определен общий тип карты, но не
+её точная модель. Вторая была полностью идентифицированна, но сообщение
+<code>not configured</code> говорит нам, что для него не найден драйвер.
 
-<h4>What can I do about a "not configured" device?</h4>
+<h4>Что я могу сделать с "not configured" устройствами?</h4>
 
 <ul>
-  <li>If the device is not one you need, you can safely ignore the
-      <code>not configured</code> warnings.
-  <li>In some cases, it's just a variation of a supported device.
-      This means it may be relatively easy for a developer to add support for
-      the new card.
-      Otherwise, a new driver would have to be written, which may not even
-      be possible if the device is not fully documented.
-  <li>If you're running the install kernel, the device may not be supported
-      due to space constraints.
-      Be sure to try with the standard <code>GENERIC</code> kernel.
-  <li>Before reporting a <code>not configured</code> device, make sure you have
-      first tested the most recent <a href="faq5.html#Flavors">snapshot</a>,
-      as support may already have been added.
-      Also check the <a href="../mail.html">mailing list archives</a> to see
-      if the issue has been discussed already.
+  <li>Если поддержка этих устройств вам не нужна, но можно просто игнорировать
+      эти <code>not configured</code> предупреждения.
+  <li>Иногда это просто один из вариантов поддерживаемого устройства. Другими
+      словами, разработчику может быть относительно просто добавить поддержку
+      новой карты. В противном случае необходимо будет написать новый драйвер,
+      что может быть даже невозможно, если устройство не полностью документировано.
+  <li>Если используется установленное ядро, устройство может не поддерживаться
+      из-за нехватки места (due to space constraints).
+      Удостоверьтесь, что проблема проявляется при использовании стандартного
+      <code>GENERIC</code> ядра.
+  <li>Прежде чем сообщать о <code>not configured</code> устройстве, удостоверьтесь,
+      что вы протестировали наиболее свежие <a href="faq5.html#Flavors">снапшоты</a>,
+      т.к. поддержка, возможно, уже была добавленна там.
+      Так же не поленитесь проверить <a href="https://www.openbsd.org/mail.html">
+      архив рассылки</a>, чтобы не создавать повторное обсуждение.
 </ul>
