--- a/faq/faq8.html
+++ b/faq/faq8.html
@@ -194,43 +194,43 @@ is not recommended.
 
 <h2 id="RevDNS">Обратный просмотр DNS</h2>
 
-Some new users experience a login delay when using services such as
-<a href="https://man.openbsd.org/ssh">ssh(1)</a>, or when using a proxy or
-sending mail.
+У некоторых новых пользоватей возникают задержки при попытках войти в
+систему при использовании, к примеру,
+<a href="https://man.openbsd.org/ssh">ssh(1)</a> или при использовании
+прокси или отправки письма.
 
 <p>
-This is almost always due to a reverse DNS problem.
-DNS is the Domain Name Service, the system the internet uses to convert a name
-(such as "www.openbsd.org") into a numeric IP address.
-Another task of DNS is the ability to take a numeric address and convert it
-back to a name.
-This is known as a reverse DNS entry.
+Это почти всегда происходит из-за проблемы обратного преобразования DNS.
+DNS (Domain Name Services или система доменных имён) используется в Internet
+для преобразования имен (таких как например "www.openbsd.org") в IP-адрес.
+Другая задача DNS - преобразовывать IP-адрес назад в "имя".
+Этот процесс называется обратным преобразованием или обратным просмотром DNS
+(reverse DNS).
 
 <p>
-In order to provide better logging, OpenBSD performs a reverse DNS
-lookup on any machine that attaches to it in many different ways,
-including <a href="https://man.openbsd.org/ssh">ssh(1)</a>,
-<a href="https://man.openbsd.org/ftp">ftp(1)</a> and
+Для более лучшего процесса входа в систему, OpenBSD выполняет обратный
+просмотр DNS для любой машины, к которой подключаются различными путями,
+включая <a href="https://man.openbsd.org/ssh">ssh(1)</a>,
+<a href="https://man.openbsd.org/ftp">ftp(1)</a> и
 <a href="https://man.openbsd.org/ftp-proxy">ftp-proxy(8)</a>.
-Unfortunately, in some cases, the machine that is making the connection
-does not have a proper reverse DNS entry.
+К несчастью, в некоторых случаях, машина, которая пытается создать соединение,
+не имеет соответствующей обратной DNS записи.
 
-<h3>Fix Using the hosts File</h3>
+<h3>Решение, использующее hosts файл</h3>
 
-The simplest fix is as follows:
-Populate your <a href="https://man.openbsd.org/hosts">hosts(5)</a>
-file with all the workstations you have in your internal network.
-Make sure that your
-<a href="https://man.openbsd.org/resolv.conf">resolv.conf(5)</a>
-file contains the line <code>lookup file bind</code>.
-This tells the resolver to start with the
-<a href="https://man.openbsd.org/hosts">hosts(5)</a> file,
-and, failing that, to use the DNS servers specified by the
-<code>nameserver</code>
-lines in your <a href="https://man.openbsd.org/resolv.conf">resolv.conf(5)</a>.
+Самое простое решение выглядит так: добавить в ваш
+<a href="https://man.openbsd.org/hosts">hosts(5)</a>
+файл все машины из внутренней сети, и проверить, что ваш файл
+<a href="https://man.openbsd.org/resolv.conf">resolv.conf(5)</a> содержит,
+строку <code>lookup file bind</code>. Это гарантирует, что resolver знает,
+что поиск начинать нужно с файла
+<a href="https://man.openbsd.org/hosts">hosts(5)</a>, и только в том случае,
+если это не прокатит, использовать DNS-серверы, заданные при помощи строк
+<code>nameserver</code> в файле
+<a href="https://man.openbsd.org/resolv.conf">resolv.conf(5)</a>.
 
 <p>
-Your <code>/etc/hosts</code> file might look something like this:
+Ваш <code>/etc/hosts</code> файл может выглядеть как этот:
 
 <pre class="cmdbox">
 ::1          localhost.in.example.org localhost
@@ -240,7 +240,7 @@ Your <code>/etc/hosts</code> file might look something like this:
 192.168.1.35 shadow.in.example.org    shadow
 </pre>
 
-Your <code>/etc/resolv.conf</code> file might look something like this:
+Ваш <code>/etc/resolv.conf</code> файл может выглядеть так:
 
 <pre class="cmdbox">
 search in.example.org
@@ -249,9 +249,11 @@ nameserver 24.2.68.34
 lookup file bind
 </pre>
 
-If you are using <a href="faq6.html#DHCP">DHCP</a>, you should add
-<code>lookup file bind</code> to your <code>/etc/resolv.conf.tail</code> file,
-as <code>resolv.conf</code> will be overwritten by
+Если вы используете
+<a href="https://www.openbsd.org/faq/faq6.html#DHCP">DHCP</a>,
+вы должны добавть <code>lookup file bind</code> в ваш
+<code>/etc/resolv.conf.tail</code> файл, так как <code>resolv.conf</code>
+будет перезаписан
 <a href="https://man.openbsd.org/dhclient">dhclient(8)</a>.
 
 <h2 id="GenNotConf">Устройство "not configured" в dmesg</h2>
@@ -283,7 +285,7 @@ rev 0x03) at pci2 dev 9 function 1 not configured
 <h4>Что я могу сделать с "not configured" устройствами?</h4>
 
 <ul>
-  <li>Если поддержка этих устройств вам не нужна, но можно просто игнорировать
+  <li>Если поддержка этих устройств вам не нужна, то можно просто игнорировать
       эти <code>not configured</code> предупреждения.
   <li>Иногда это просто один из вариантов поддерживаемого устройства. Другими
       словами, разработчику может быть относительно просто добавить поддержку
