--- a/faq/index.html
+++ b/faq/index.html
@@ -59,7 +59,7 @@ OpenBSD, так и <a href="http://www.openbsd.org/cgi-bin/man.cgi">онлайн
 <li><a href="faq1.html#Platforms"  >Поддерживаемое железо</a>
 <li><a href="faq1.html#ManPages"   >Страницы руководств</a>
 <li><a href="faq1.html#MailLists"  >Список почтовых рассылок</a>
-<li><a href="faq1.html#OtherUnixes">Переход на OpenBSD</a>
+<li><a href="faq1.html#OtherUnixes">Миграция на OpenBSD</a>
 <li><a href="faq1.html#Bugs"       >Отправка сообщений об ошибках</a>
 <li><a href="faq1.html#Support"    >Поддержка проекта</a>
 </ul>
