--- a/faq/faq5.html
+++ b/faq/faq5.html
@@ -23,7 +23,7 @@ FAQ - Собираем систему из исходников
 
 <ul>
   <li><a href="#Flavors"    >OpenBSD's Flavors</a>
-  <li><a href="#Snapshots"  >Разрабатываемые Snapshot'ы</a>
+  <li><a href="#Snapshots"  >Разрабатываемые cнапшоты (snapshots)</a>
   <li><a href="#Bld"        >Собираем OpenBSD из исходников</a>
   <li><a href="#Release"    >Making a Release</a>
   <li><a href="#Xbld"       >Собираем X</a>
