--- a/openssh/specs.html
+++ b/openssh/specs.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-<title>OpenSSH: Specifications</title>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+<title>OpenSSH: Спецификации</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="description" content="the OpenSSH specifications page">
 <meta name="copyright" content="This document copyright 2016 by OpenBSD.">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -15,14 +15,14 @@
 <h2>
 <a href="index.html">
 <font color="#0000ff"><i>Open</i></font><font color="#000084">SSH</font></a>
-<font color="#e00000">Specifications</font>
+<font color="#e00000">Спецификации</font>
 </h2>
 <hr>
 
 <p>
-OpenSSH implements the following specifications.
+В OpenSSH реализованы следующие спецификации.
 
-<h3>SSH protocol version 2 Core RFCs</h3>
+<h3>Основные RFC второй версии протокола SSH</h3>
 Source: <a href="https://datatracker.ietf.org/wg/secsh/">secsh working group</a>
 <p>
 <table>
@@ -52,7 +52,7 @@ Source: <a href="https://datatracker.ietf.org/wg/secsh/">secsh working group</a>
   </tr>
 </table>
 
-<h3>SSH protocol version 2 Extension RFCs</h3>
+<h3>RFC, расширяющие возможности второй версии протокола SSH</h3>
 <table>
   <tr>
   <tr>
@@ -141,7 +141,7 @@ Source: <a href="https://datatracker.ietf.org/wg/secsh/">secsh working group</a>
   </tr>
 </table>
 
-<h3>SSH protocol version 2 draft specifications</h3>
+<h3>DRAFT-спецификации (черновики, не опубликованные версии) для второй версии протокола SSH</h3>
 <table>
   <tr>
     <td><a href="https://tools.ietf.org/html/draft-ietf-secsh-filexfer-02"
@@ -156,7 +156,7 @@ Source: <a href="https://datatracker.ietf.org/wg/secsh/">secsh working group</a>
   </tr>
 </table>
 
-<h3>SSH protocol version 2 vendor extensions</h3>
+<h3>Дополнения от производителей для второй версии протокола SSH</h3>
 <table>
   <tr>
     <td><a
@@ -227,7 +227,7 @@ Source: <a href="https://datatracker.ietf.org/wg/secsh/">secsh working group</a>
   </tr>
 </table>
 
-<h3>Other specifications</h3>
+<h3>Другие спецификации</h3>
 <table>
   <tr>
     <td><a href="https://www.openbsd.org/openssh/txt/socks4.protocol">socks4.protocol</a>
