--- a/openssh/manual.html
+++ b/openssh/manual.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-<title>OpenSSH: Manual Pages</title>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+<title>OpenSSH: Документация (man-pages)</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="description" content="OpenSSH Manual Pages">
 <meta name="copyright" content="This document copyright 1999-2016 by OpenBSD.">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -15,13 +15,13 @@
 <h2>
 <a href="index.html">
 <font color="#0000ff"><i>Open</i></font><font color="#000084">SSH</font></a>
-<font color="#e00000">Manual Pages</font>
+<font color="#e00000">Документация (man-pages)</font>
 </h2>
 <hr>
 
 <p>
-Web manual pages are available from OpenBSD for the following commands.
-These manual pages reflect the latest development release of OpenSSH.<p>
+OpenBSD man-страницы, доступные в online, для нижеперечисленных команд.
+Эти страницы относятся к последней development-версии OpenSSH.<p>
 
 <ul>
 <li><a href="https://man.openbsd.org/ssh">ssh(1)</a>
@@ -82,7 +82,7 @@ and allows tunneling of login sessions and TCP-forwarding.
 It provides a flow control service for these channels.
 Additionally, various channel-specific options can be negotiated.
 </ul>
-Additional documents specify:
+Дополнительные документы спецификаций:
 <ul>
 <li> The
 <a href="https://www.ietf.org/rfc/rfc4256.txt">interactive
