--- a/libressl/signing.html
+++ b/libressl/signing.html
@@ -12,10 +12,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="openbsd.css">
 
-<h2>
+<h2 id=OpenBSD>
 <a href="index.html">
-<font color="#0000ff"><i>Libre</i></font><font color="#000084">SSL</font></a>
-<font color="#e00000">Электронная подпись релизов</font>
+<i>Libre</i><b>SSL</b></a>
+Электронная подпись релизов
 </h2>
 <hr>
 
@@ -23,6 +23,7 @@
 Все релизы портированной версии LibreSSL получают электронную подпись при помощи
 <a href="https://man.openbsd.org/signify.1">signify(1)</a>, при использовании
 открытого (public) ключа:
+<p>
 <a href="https://github.com/libressl-portable/portable/commit/c5c2aa37be6134f6552070ab21f49d53ebfe86e6">RWQg/nutTVqCUVUw8OhyHt9n51IC8mdQRd1b93dOyVrwtIXmMI+dtGFe</a>
 
 <p>
