--- a/openntpd/goals.html
+++ b/openntpd/goals.html
@@ -10,12 +10,10 @@
 <link rel="canonical" href="http://www.openntpd.org/goals.html">
 </head>
 
-<body bgcolor="#ffffff" text="#000000" link="#23238E">
-
-<h2>
+<h2 id=OpenBSD>
 <a href="index.html">
-<font color="#0000ff"><i>Open</i></font><font color="#000084">NTPD</font></a>
-<font color="#e00000">Цели проекта</font>
+<i>Open</i><b>NTPD</b></a>
+Цели проекта
 </h2>
 <hr>
 
