--- a/openntpd/portable.html
+++ b/openntpd/portable.html
@@ -13,12 +13,10 @@
 </style>
 </head>
 
-<body bgcolor="#ffffff" text="#000000" link="#23238E">
-
-<h2>
+<h2 id=OpenBSD>
 <a href="index.html">
-<font color="#0000ff"><i>Open</i></font><font color="#000084">NTPD</font></a>
-<font color="#e00000">Портируемая версия</font>
+<i>Open</i><b>NTPD</b></a>
+Портируемая версия
 </h2>
 <hr>
 
