--- a/openntpd/index.html
+++ b/openntpd/index.html
@@ -1,56 +1,63 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html>
-<head>
+<!doctype html>
+<html lang=en>
+    <meta charset=utf-8>
     <title>OpenNTPD</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="description" content="the main OpenNTPD page">
-    <meta name="copyright" content="This document copyright 2006-2019
-                                    by OpenBSD.">
-    <link rel="shortcut icon" HREF="favicon.ico" TYPE="image/x-icon">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="canonical" href="http://www.openntpd.org/">
-</head>
-<body text="#000000" bgcolor="#ffffff" topmargin=0 leftmargin=0 marginheight=0 marginwidth=0>
-<table width="100%" height="100%" border="0" cellspacing="0" cellpadding="4">
-<tr><td bgcolor="#99cced" rowspan="2" valign=top>
-<b><big>Информация</big></b><br>
-&nbsp;<a href="goals.html">Цели проекта</a><br>
-&nbsp;<a href="features.html">Возможности</a><br>
-&nbsp;<a href="papers.html">Доклады</a><br>
-&nbsp;<a href="manual.html">Документация</a><br><p>
-<b><big>Для OpenBSD</big></b><br>
-&nbsp;<a href="../anoncvs.html">AnonCVS</a><br>
-&nbsp;<a href="https://cvsweb.openbsd.org/src/usr.sbin/ntpd/">CVSWeb</a><br><p>
-<b><big>Для других ОС</big></b><br>
-&nbsp;<a href="portable.html">Releases</a><br>
-&nbsp;<a href="https://github.com/openntpd-portable">Проект на GitHub</a><br>
-&nbsp;<a href="https://github.com/openntpd-portable/openntpd-portable/issues">Сообщить об ошибке</a>
-</td>
-    <td bgcolor="#0000cc" rowspan="2"><font size="1">&nbsp;</font></td>
-    <td bgcolor="#ffffff" valign="top"><center>
-    <img border="0" src="images/openntpd.jpg" height=210 width=599 alt="[OpenNTPD]"></center>
-    <center><font color="#0000a0">
-    Релиз <a href="http://openntpd.org/txt/release-6.2p3.txt">OpenNTPD 6.2p3</a> состоялся 30 октября 2017 года<br>
-    </font></center>
-    <br>
+    <link rel="stylesheet" href="openbsd.css">
+
+<table id="project-main" class="not-openbsd">
+  <tr class="align-top">
+    <td>
+
+      <h1>Информация</h1>
+      <ul>
+        <li><a href="goals.html">Цели проекта</a>
+        <li><a href="features.html">Возможности</a>
+        <li><a href="papers.html">Доклады</a>
+        <li><a href="manual.html">Документация</a>
+      </ul>
+      <h1>Для OpenBSD</h1>
+      <ul>
+        <li><a href="https://www.openbsd.org/anoncvs.html">AnonCVS</a>
+        <li><a href="https://cvsweb.openbsd.org/src/usr.sbin/ntpd/">CVSWeb</a>
+      </ul>
+      <h1>Для других ОС</h1>
+      <ul>
+        <li><a href="portable.html">Releases</a>
+        <li><a href="https://github.com/openntpd-portable">Проект на GitHub</a>
+        <li><a href="https://github.com/openntpd-portable/openntpd-portable/issues">Сообщить об ошибке</a>
+      </ul>
+
+    <td>
+      <h1 class="header">
+        <img src="images/openntpd.jpg" height=210 width=599 alt="[OpenNTPD]">
+      </h1>
+
+      <p id="callout">
+        Релиз <a href="txt/release-6.2p3.txt">OpenNTPD 6.2p3</a> состоялся 30 октября 2017 года
+
 <p>
-OpenNTPD представляет из себя <b>СВОБОДНУЮ</b> и легкую в использовании
+OpenNTPD представляет из себя <strong>СВОБОДНУЮ</strong> и легкую в использовании
 реализацию Network Time Protocol. Она позволяет синхронизировать установки
 времени в системе с удаленными NTP-серверами, а так же сама может выступать в
 качестве сервера.
+
 <p>
 OpenNTPD была первоначально написана Хеннингом Брауэром (Henning Brauer)
 для <a href="../index.html">проекта OpenBSD</a> и выпускается как
 базовый компонент OpenBSD каждые шесть месяцев.
+
 <p>Портируемая версия, поддерживаемая Брентом Коком (Brent Cook), доступна
 со своим циклом релизов в виде тарбола. Приветствуется любой вклад как в
 саму OpenNTPD, так и в её портированную версию.</p>
+
 <p>
 OpenNTPD свободно распространяется в соответствии с лицензией BSD.
 
-    </td>
-</tr>
-
-<tr>
+<tr class="align-bottom">
+<td>
 <td>
 <hr>
 <small>
@@ -59,10 +66,5 @@ Translation project is organized by <a href="https://github.com/alexander-naumov
 and is going with the support of
 <a href="https://github.com/openbsd-ru/openbsd-ru.github.io/blob/master/README.md#CONTRIBUTORS">
 volunteers</a>.</em>
-</br>
 </small>
-</td>
-</tr>
 </table>
-</body>
-</html>
