[1.76] fix broken link

--- a/openntpd/index.html
+++ b/openntpd/index.html
@@ -36,7 +36,7 @@
       </h1>
 
       <p id="callout">
-        Релиз <a href="txt/release-6.2p3.txt">OpenNTPD 6.2p3</a> состоялся 30 октября 2017 года
+        Релиз <a href="http://openntpd.org/txt/release-6.2p3.txt">OpenNTPD 6.2p3</a> состоялся 30 октября 2017 года
 
 <p>
 OpenNTPD представляет из себя <strong>СВОБОДНУЮ</strong> и легкую в использовании
