--- a/openbgpd/mail.html
+++ b/openbgpd/mail.html
@@ -9,12 +9,10 @@
 <link rel="canonical" href="https://www.openbgpd.org/mail.html">
 </head>
 
-<body bgcolor="#ffffff" text="#000000" link="#23238E">
-
-<h2>
+<h2 id=OpenBSD>
 <a href="index.html">
-<font color="#0000ff"><i>Open</i></font><font color="#000084">BGPD</font></a>
-<font color="#e00000">Почтовые рассылки</font>
+<i>Open</i><b>BGPD</b></a>
+Почтовые рассылки
 </h2>
 <hr>
 
