--- a/openbgpd/papers.html
+++ b/openbgpd/papers.html
@@ -10,12 +10,10 @@
 <link rel="canonical" href="http://www.openbgpd.org/papers.html">
 </head>
 
-<body bgcolor="#ffffff" text="#000000" link="#23238E">
-
-<h2>
+<h2 id=OpenBSD>
 <a href="index.html">
-<font color="#0000ff"><i>Open</i></font><font color="#000084">BGPD</font></a>
-<font color="#e00000">Доклады и презентации</font>
+<i>Open</i><b>BGPD</b></a>
+Доклады и презентации
 </h2>
 <hr>
 
