--- a/openbgpd/index.html
+++ b/openbgpd/index.html
@@ -41,11 +41,11 @@
 <p>
 OpenBGPD это <strong>СВОБОДНАЯ</strong> реализация четвертой версии протокола
 динамической маршрутизации BGP (Border Gateway Protocol).
-Она позволяет использовать обычные машины в сети в качестве маршрутизаторов, и
+Она позволяет использовать обычные машины в сети в качестве маршрутизаторов и
 обмениваться маршрутами с другими системами, используя протокол BGP.
 <p>
 
-Проект родился по причине неудовлетворенности другими существующими на тот момент
+Проект родился по причине неудовлетворенности другими, существующими на тот момент
 BGP-демонами. OpenBGPD в настоящее время является достаточно полной реализацией
 BGP, которую используют многие сервера.
 Пользователи часто хвалят нас за простоту использования, высокую
