--- a/libressl/index.html
+++ b/libressl/index.html
@@ -1,43 +1,46 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html>
-<head>
-<title>LibreSSL</title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<meta name="description" content="the main LibreSSL page">
-<meta name="copyright" content="This document copyright 2014-2019 by OpenBSD.">
-<link rel="shortcut icon" HREF="favicon.ico" TYPE="image/x-icon">
-<link rel="canonical" href="https://www.libressl.org/index.html">
-</head>
-<body text="#000000" bgcolor="#ffffff" topmargin=0 leftmargin=0 marginheight=0 marginwidth=0>
-<table width="100%" height="100%" border="0" cellspacing="0" cellpadding="4">
-<tr>
-  <td bgcolor="#99cced" rowspan="2" width="15%" valign=top>
-    <big><b>Проект&nbsp;LibreSSL</b></big>
-    <br>
-    &nbsp;<a href="goals.html">Цели проекта</a><br>
-    &nbsp;<a href="releases.html">Релизы</a><br>
-    &nbsp;<a href="signing.html">Электронная подпись</a><br>
-    &nbsp;<a href="papers.html">Доклады</a><br>
-    &nbsp;<a href="patches.html">Патчи</a><br>
-    &nbsp;<a href="mail.html">Почтовые рассылки</a><br>
-    <br>
-    &nbsp;<a href="https://ftp.openbsd.org/pub/OpenBSD/LibreSSL">Скачать</a><br>
-    <br>
-    <big><b>Исходники</b></big>
-    <br>
-    &nbsp;<a href="https://github.com/libressl-portable/">GitHub</a><br>
-    &nbsp;<a href="https://cvsweb.openbsd.org/src/lib/libtls/">CVS on Web (libtls)</a><br>
-    &nbsp;<a href="https://cvsweb.openbsd.org/src/lib/libcrypto/">CVS on Web (libcrypto)</a><br>
-    &nbsp;<a href="https://cvsweb.openbsd.org/src/lib/libssl/">CVS on Web (libssl)</a><br>
-  </td>
-  <td bgcolor="#0000cc" rowspan="2"><font size="1">&nbsp;</font>
-  </td>
-  <td bgcolor="#ffffff" valign="top"><center>
-    <img border="0" width=599 height=192 src="images/libressl.jpg"></center>
-    <center><font color="#0000a0">
-    Релиз <a href="https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/libressl-2.9.2-relnotes.txt">LibreSSL 2.9.2</a>
-    состоялся 20 мая 2019 года<br>
-    </font></center>
+<!doctype html>
+<html lang=en>
+    <meta charset=utf-8>
+    <title>LibreSSL</title>
+    <meta name="description" content="the main LibreSSL page">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="canonical" href="https://www.libressl.org/">
+    <link rel="stylesheet" href="openbsd.css">
+
+<table id="project-main" class="not-openbsd">
+  <tr class="align-top">
+    <td>
+
+      <h1>Проект LibreSSL</h1>
+      <ul>
+        <li><a href="goals.html">Цели проекта</a>
+        <li><a href="releases.html">Релизы</a>
+        <li><a href="signing.html">Электронная подпись</a>
+        <li><a href="papers.html">Доклады</a>
+        <li><a href="patches.html">Патчи</a>
+        <li><a href="mail.html">Почтовые рассылки</a>
+      </ul>
+
+      <ul>
+        <li><a href="https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/">Download</a>
+      </ul>
+
+      <h1>Исходники</h1>
+      <ul>
+        <li><a href="https://github.com/libressl-portable/">GitHub</a>
+        <li><a href="https://cvsweb.openbsd.org/src/lib/libtls/">CVS on Web (libtls)</a>
+        <li><a href="https://cvsweb.openbsd.org/src/lib/libcrypto/">CVS on Web (libcrypto)</a>
+        <li><a href="https://cvsweb.openbsd.org/src/lib/libssl/">CVS on Web (libssl)</a>
+      </ul>
+
+    <td>
+      <h1 class="header">
+        <img width=599 height=192 src="images/libressl.jpg" alt="[LibreSSL]">
+      </h1>
+
+      <p id="callout">
+        Релиз <a href="https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/libressl-2.9.2-relnotes.txt">LibreSSL 2.9.2</a> состоялся 20 мая 2019 года
+    
     <p>
     LibreSSL представляет из себя криптографический TLS-стек, возникший
     как форк
@@ -52,7 +55,7 @@
     ОС (Linux, FreeBSD, Windows, и.т.д.).
 
     <p>
-    Последней стабильной версией является 2.9.2<br/>
+    Последней стабильной версией является 2.9.2<br>
     Больше информации можно найти на странице <a href="releases.html">доступных версий</a>.
 
     <p>
@@ -77,12 +80,9 @@
     и
     <a href="https://www.openbsd.org/donations.html">проектом OpenBSD</a>.
     Пожалуйста не забывайте о том, что и вы можете поддержать проект.
-    <p>
-  </td>
-  <td rowspan="2" width=20 valign=top>
-  </td>
-</tr>
-<tr>
+
+<tr class="align-bottom">
+<td>
 <td>
 <hr>
 <small>
@@ -92,8 +92,4 @@ and is going with the support of
 <a href="https://github.com/openbsd-ru/openbsd-ru.github.io/blob/master/README.md#CONTRIBUTORS">
 volunteers</a>.</em>
 </small>
-</td>
-</tr>
 </table>
-</body>
-</html>
